add gitignore file

--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
       </p>
 
       <div class="cta">
-        <p>Looking for a [Your Profession/Role] for your next project?</p>
+        <p>Looking for a Software Developer Role for your next project?</p>
         <a href="[Link to your Contact Page]" class="contact-button"
           >Let's Connect!</a
         >
