--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Contact Me</h1>
     <div class="container"></div>
     <form action="#" method="post">
       <label for="name">Name:</label><br />
@@ -20,6 +21,7 @@
       ><br /><br />
 
       <input type="submit" value="Submit" />
+      <button class="btn btn-primary" Submit></button>
     </form>
   </body>
 </html>
