changed heading in home.html by B1

--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
   </head>
   <body>
     <header>
-      <h1>Pawan Singh</h1>
+      <h1>Pawan</h1>
       <p>Computer Science Student | Aspiring Software Developer</p>
     </header>
 
