add info about me

--- a/home.html
+++ b/home.html
@@ -84,8 +84,9 @@
   </head>
   <body>
     <header>
-      <h1>Pawan</h1>
+      <h1>Pawan Singh</h1>
       <p>Computer Science Student | Aspiring Software Developer</p>
+      <p> i also teach Computer Science Basics </p> 
     </header>
 
     <nav>
