modified masterfile by going in the past commit

--- a/by_master.html
+++ b/by_master.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>By Master Branch</h1>
-    we have updated this file.
+    <h2>I'm building something new by travelling the previous commits</h2>
   </body>
 </html>
