--- a/about.html
+++ b/about.html
@@ -3,282 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me - Pawan Singh Portfolio</title>
-    <style>
-      /* Basic Reset & Body Styling */
-      body {
-        font-family: "Arial", sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-        color: #333;
-      }
-
-      /* Container for content */
-      .container {
-        max-width: 900px;
-        margin: 40px auto;
-        padding: 30px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      }
-
-      /* Header Styling */
-      h1 {
-        text-align: center;
-        color: #007bff; /* Primary blue */
-        margin-bottom: 30px;
-        font-size: 2.8em;
-        letter-spacing: 1px;
-        border-bottom: 2px solid #eee;
-        padding-bottom: 15px;
-      }
-
-      h2 {
-        color: #333;
-        margin-top: 30px;
-        margin-bottom: 15px;
-        font-size: 1.8em;
-        border-bottom: 1px dashed #eee;
-        padding-bottom: 8px;
-      }
-
-      /* Profile Image */
-      .profile-img {
-        display: block;
-        margin: 0 auto 30px auto;
-        border-radius: 50%;
-        width: 180px;
-        height: 180px;
-        object-fit: cover;
-        border: 5px solid #007bff;
-        box-shadow: 0 0 15px rgba(0, 123, 255, 0.3);
-        transition: transform 0.3s ease-in-out;
-      }
-
-      .profile-img:hover {
-        transform: scale(1.05);
-      }
-
-      /* Paragraphs */
-      p {
-        margin-bottom: 15px;
-        font-size: 1.1em;
-        text-align: justify;
-      }
-
-      /* Lists for Skills & Interests */
-      ul {
-        list-style: none;
-        padding: 0;
-        margin-bottom: 20px;
-      }
-
-      ul li {
-        background-color: #e9f7ff;
-        margin-bottom: 8px;
-        padding: 10px 15px;
-        border-left: 5px solid #007bff;
-        border-radius: 4px;
-        font-size: 1.05em;
-        transition: background-color 0.2s ease-in-out;
-      }
-
-      ul li:hover {
-        background-color: #d1efff;
-      }
-
-      /* Call to Action/Contact */
-      .cta {
-        text-align: center;
-        margin-top: 40px;
-        padding-top: 20px;
-        border-top: 1px dashed #eee;
-      }
-
-      .cta p {
-        font-size: 1.2em;
-        font-weight: bold;
-        color: #555;
-      }
-
-      .contact-button {
-        display: inline-block;
-        background-color: #28a745; /* Green for contact */
-        color: #fff;
-        padding: 15px 30px;
-        text-decoration: none;
-        border-radius: 5px;
-        font-size: 1.3em;
-        font-weight: bold;
-        transition: background-color 0.3s ease-in-out, transform 0.2s ease;
-      }
-
-      .contact-button:hover {
-        background-color: #218838;
-        transform: translateY(-2px);
-      }
-
-      /* Social Media Icons (optional, if you want to add them here) */
-      .social-links {
-        text-align: center;
-        margin-top: 25px;
-      }
-
-      .social-links a {
-        display: inline-block;
-        margin: 0 10px;
-        font-size: 2.5em;
-        color: #007bff;
-        text-decoration: none;
-        transition: color 0.3s ease;
-      }
-
-      .social-links a:hover {
-        color: #0056b3;
-      }
-
-      /* Responsive Design */
-      @media (max-width: 768px) {
-        .container {
-          margin: 20px;
-          padding: 20px;
-        }
-
-        h1 {
-          font-size: 2.2em;
-        }
-
-        h2 {
-          font-size: 1.6em;
-        }
-
-        .profile-img {
-          width: 150px;
-          height: 150px;
-        }
-
-        p {
-          font-size: 1em;
-        }
-
-        .contact-button {
-          padding: 12px 25px;
-          font-size: 1.1em;
-        }
-      }
-
-      @media (max-width: 480px) {
-        h1 {
-          font-size: 1.8em;
-        }
-
-        h2 {
-          font-size: 1.4em;
-        }
-
-        .profile-img {
-          width: 120px;
-          height: 120px;
-        }
-
-        ul li {
-          padding: 8px 10px;
-        }
-
-        .contact-button {
-          font-size: 1em;
-          padding: 10px 20px;
-        }
-      }
-    </style>
-    <!-- Font Awesome for social icons (optional) -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha512-..."
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>About Me</title>
   </head>
-  <body>
-    <div class="container">
-      <h1>About Me</h1>
-
-      <img
-        src="https://static.toiimg.com/thumb/msid-120772532,width-400,resizemode-4/Link-Click_-Bridon-Arc-_-OFFICIAL-TRAILER-0-0-screenshot.jpg"
-        alt="[Pawan Singh] Profile Picture"
-        class="profile-img"
-      />
-      <!-- Replace "https://via.placeholder.com/180" with the actual path to your professional photo -->
-
-      <p>
-        Hello! I'm <strong>Pawan Singh</strong>, a Computer Science Student,
-        Learning Full-Stack Developer, UX/UI Designer, Digital Marketer, Content
-        Creator based in India. My journey in Computer Science began in 2025,
-        driven by a deep passion for [mention your core passion, e.g., creating
-        intuitive user experiences, building robust web applications, crafting
-        compelling narratives, solving complex problems with data].
-      </p>
-      <p>I am an instructor. I work for myself.</p>
-      <p>
-        I thrive on Learning and Explaining, bringing ideas to life through
-        code, designing elegant solutions, optimizing digital strategies,
-        exploring new technologies]. My approach combines [mention your
-        methodology, e.g., strong technical expertise with a creative mindset,
-        data-driven insights with user-centered design, strategic thinking with
-        hands-on execution] to deliver impactful and innovative results.
-      </p>
-
-      <h2>My Expertise</h2>
-      <ul>
-        <li>[Skill 1, e.g., JavaScript (React, Node.js)]</li>
-        <li>[Skill 2, e.g., UI/UX Design (Figma, Adobe XD)]</li>
-        <li>[Skill 3, e.g., SEO & Content Strategy]</li>
-        <li>[Skill 4, e.g., Python (Django, Flask)]</li>
-        <li>[Skill 5, e.g., Project Management (Agile/Scrum)]</li>
-        <li>[Add more relevant skills]</li>
-      </ul>
-
-      <h2>What I Do</h2>
-      <p>
-        In my work, I focus on [describe your main professional activities,
-        e.g., developing scalable web applications, designing user-friendly
-        interfaces, managing end-to-end marketing campaigns, creating engaging
-        visual content]. I am particularly skilled in [highlight a specific area
-        of your work, e.g., front-end development with a keen eye for design,
-        translating complex data into actionable insights, leading
-        cross-functional teams]. I am always eager to take on new challenges and
-        continuously learn and adapt in this ever-evolving digital landscape.
-      </p>
-
-      <div class="cta">
-        <p>Looking for a Software Developer Role for your next project?</p>
-        <a href="[Link to your Contact Page]" class="contact-button"
-          >Let's Connect!</a
-        >
-        <!-- Replace "[Link to your Contact Page]" with the actual URL -->
-      </div>
-
-      <!-- Optional: Social Media Links -->
-      <div class="social-links">
-        <a href="[Your LinkedIn Profile]" target="_blank" aria-label="LinkedIn"
-          ><i class="fab fa-linkedin"></i
-        ></a>
-        <a href="[Your GitHub Profile]" target="_blank" aria-label="GitHub"
-          ><i class="fab fa-github"></i
-        ></a>
-        <a
-          href="[Your Twitter/X Profile (if active)]"
-          target="_blank"
-          aria-label="Twitter"
-          ><i class="fab fa-twitter"></i
-        ></a>
-        <!-- Add more as needed, e.g., Behance, Dribbble, Instagram, personal blog -->
-        <!-- Example: <a href="[Your Behance Profile]" target="_blank" aria-label="Behance"><i class="fab fa-behance-square"></i></a> -->
-      </div>
-    </div>
   </body>
 </html>
