--- a/contact.html
+++ b/contact.html
@@ -3,25 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Contact Me</title>
   </head>
   <body>
-    <h1>Contact Me</h1>
-    <div class="container"></div>
-    <form action="#" method="post">
-      <label for="name">Name:</label><br />
-      <input type="text" id="name" name="name" /><br /><br />
-
-      <label for="email">Email:</label><br />
-      <input type="email" id="email" name="email" /><br /><br />
-
-      <label for="message">Message:</label><br />
-      <textarea id="message" name="message" rows="4" cols="50"></textarea
-      ><br /><br />
-
-      <input type="submit" value="Submit" />
-      <button class="btn btn-primary" Submit></button>
-    </form>
+   
   </body>
 </html>
