--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
-    <link href="./styles/style.css" rel="stylesheet">
 
 
     <title>My Project</title>
@@ -23,7 +22,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand active" href="index.html">My <span style="color:red;"> Portfolio </span> </a>
+          <a class="navbar-brand" href="index.html">My <span style="color:red;"> Portfolio </span> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,7 +32,7 @@
                 <a class="nav-link" aria-current="page" href="about.html">Know Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projects.html">My Projects</a>
+                <a class="nav-link active" href="projects.html">My Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -43,9 +42,37 @@
         </div>
       </nav>
 
+  <div class="container p-5" >
+<h1 class="alert alert-info text-center">My Projects</h1>
+
+      <div class="row">
+  <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+        <img src="./imgs/face_recog.jpeg" style="width: 50%;">
+        <h2 class="card-title">Syndicated Alerting</h2>
+        <p class="card-text" style="text-align: justify;">Using PySpark,PySQL and Databricks and ADF, SDO Alerts to Retailers, Where we send Daily Alerts and Weekly Alerts to the retailers.</p>
+        <a href="#" class="btn btn-primary">GitHub Link </a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+        <img src="./imgs/ncert_academy.png" style="width: 34.5%;">
+        <h2 class="card-title">NCERT Academy</h2>
+        <p class="card-text" style="text-align: justify;">Using HTML, CSS, Javascript and Backend, Created a website for the courses of NCERT Books</p>
+        <a href="#" class="btn btn-primary">GitHub Link </a>
+      </div>
+    </div>
+  </div>
 
 
-    
+
+
+  
+</div>
+</div>
     </section>
 
 
