--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-
-    <link href="./styles/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <title>Contact Me</title>
   </head>
@@ -18,12 +15,9 @@
 
 
 
-    <section class="home">
-
-
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand active" href="index.html">My <span style="color:red;"> Portfolio </span> </a>
+          <a class="navbar-brand" href="index.html">My <span style="color:red;"> Portfolio </span> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -36,7 +30,7 @@
                 <a class="nav-link" href="projects.html">My Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link active" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -46,7 +40,55 @@
 
 
     
-    </section>
+  <section>
+   <div style="width: 60%; margin: 5% auto;">
+
+   <div class="card" >
+  <div class="card-body">
+    <h2 class="card-title">Contact Me</h2>
+    <p class="card-text">
+      
+      <form>
+  <div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+    </p>
+  </div>
+
+
+
+<div style="width: 75%; margin:0 auto;">
+  <div class="row">
+    <div class="col-6">
+      <i class="bi bi-facebook" style="font-size: 20px;"></i>
+      <a href="#">facebook.com/xyz</a>
+    </div>
+    <div class="col-6">
+      <i class="bi bi-linkedin" style="font-size: 20px;"></i>
+      <a href="#">linkedin.com/xyz</a>
+    </div>
+    <div class="col-6">
+      <i class="bi bi-instagram" style="font-size: 20px;"></i>
+      <a href="#">instagram.com/xyz</a>
+    </div>
+    <div class="col-6">
+      <i class="bi bi-whatsapp" style="font-size: 20px;"></i>
+      <a href="#">+91 9876543210</a>
+    </div>
+  </div>
+</div>
+
+ </div>
+  </div>
+  </section>
 
 
 
