--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <a class="nav-link" aria-current="page" href="about.html">Know Me</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="skills.html">Skills</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="projects.html">My Projects</a>
               </li>
               <li class="nav-item">
